[gd_scene load_steps=14 format=3 uid="uid://ca7bqqskfc2hn"]

[ext_resource type="Script" uid="uid://bd8mfjymyl5v1" path="res://entities/bob_prank/bob_prank.gd" id="1_prdn3"]
[ext_resource type="Texture2D" uid="uid://bt4gtsagonweu" path="res://assets/textures/props/bucket.png" id="1_y42yf"]
[ext_resource type="Resource" uid="uid://befr3srxsg1k4" path="res://assets/resources/items/water_bucket/water_bucket.tres" id="2_3d3v3"]
[ext_resource type="PackedScene" uid="uid://dn1c1mniy4ja3" path="res://components/interact/interact_component.tscn" id="2_prdn3"]
[ext_resource type="PackedScene" uid="uid://dixvuy0ma0nk6" path="res://components/dialog/DialogComponent.tscn" id="5_m60it"]
[ext_resource type="Script" uid="uid://cy1tkhpqsq3rh" path="res://components/dialog/resources/entries/base/dialog_entry.gd" id="6_lrpxk"]
[ext_resource type="Script" uid="uid://b58bcr2p3lcds" path="res://components/dialog/resources/actions/base/dialog_action.gd" id="7_2cnps"]
[ext_resource type="Resource" uid="uid://8tohddm73ua5" path="res://assets/resources/characters/player.tres" id="8_kqs1m"]
[ext_resource type="Script" uid="uid://c2c64doslfxei" path="res://components/dialog/resources/entries/dialog_text_collection.gd" id="9_w2rqu"]
[ext_resource type="Script" uid="uid://bljc8yqis8nnu" path="res://components/dialog/resources/dialog_data.gd" id="10_7373f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrpxk"]
size = Vector2(65, 430)

[sub_resource type="Resource" id="Resource_h54q3"]
script = ExtResource("9_w2rqu")
texts = Array[String](["Too late"])
character = ExtResource("8_kqs1m")
additional = Array[ExtResource("7_2cnps")]([])
metadata/_custom_type_script = "uid://c2c64doslfxei"

[sub_resource type="Resource" id="Resource_2qpo0"]
script = ExtResource("10_7373f")
entries = Array[ExtResource("6_lrpxk")]([SubResource("Resource_h54q3")])
metadata/_custom_type_script = "uid://bljc8yqis8nnu"

[node name="BobPrank" type="Area2D" node_paths=PackedStringArray("interact_comp", "dialog_comp", "content")]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_prdn3")
item = ExtResource("2_3d3v3")
interact_comp = NodePath("InteractComponent")
dialog_comp = NodePath("DialogComponent")
content = NodePath("Content")

[node name="PrankDetection" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -211)
shape = SubResource("RectangleShape2D_lrpxk")
debug_color = Color(0.415622, 0.569699, 0.569158, 0.42)

[node name="Content" type="Node2D" parent="."]
position = Vector2(0, -448)

[node name="Sprite2D" type="Sprite2D" parent="Content"]
position = Vector2(64, -48)
rotation = -0.523598
texture = ExtResource("1_y42yf")

[node name="InteractComponent" parent="." instance=ExtResource("2_prdn3")]
position = Vector2(0, -224)
size = Vector2i(165, 445)
type = 4

[node name="DialogComponent" parent="." instance=ExtResource("5_m60it")]
dialog_data = SubResource("Resource_2qpo0")
